set up student profile

--- a/index.html
+++ b/index.html
@@ -6,6 +6,55 @@
     <title>Student Profile_Alt School</title>
 </head>
 <body>
-    
+    <header id="top">
+        <h1>ALT School Student Profile</h1>
+    </header>
+
+    <main>
+        <section>
+            <h2>Basic Information</h2>
+            <p><strong>Name:</strong> Amarachi Izuegbunam</p>
+            <p><strong>ALT SCHOOL ID:</strong> ALT/SOE/025/0959</p>
+            <p><strong>Program:</strong> School of Engineering</p>
+            <p><strong>Track:</strong> Cloud Engineering</p>
+            <p><strong>Semester:</strong> 1st Semester</p>
+        </section>
+
+        <section>
+            <h2>Biography</h2>
+            <p>I am a passionate technologist with 3 years of experience in the IT industry. I graduated with a degree in Computer Engineering from Nnamdi Azikiwe University Awka in 2021. Since then, I've worked as a technical support specialist for a financial services company, where I've developed a strong interest in web development.</p>
+            <p>I'm particularly interested in creating intuitive, accessible, and responsive web applications that solve real-world problems. In my free time, I contribute to open-source projects and participate in local tech meetups to stay current with industry trends.</p>
+        </section>
+
+        <section>
+            <h2>Why I Joined ALT School</h2>
+            <p>I joined ALT School's engineering program for several compelling reasons:</p>
+            <ul>
+                <li>The practical, project-based curriculum that focuses on real-world applications</li>
+                <li>The opportunity to learn from industry professionals with current, relevant experience</li>
+                <li>The collaborative learning environment that mimics actual workplace scenarios</li>
+                <li>The flexibility to continue working while advancing my technical skills</li>
+                <li>The focus on both technical skills and soft skills necessary for career advancement</li>
+            </ul>
+        </section>
+
+        <section>
+            <h2>My Goals for the Program</h2>
+            <p>During my time at ALT School, I aim to achieve the following goals:</p>
+            <ol>
+                <li>Master modern cloud technologies </li>
+                <li>Build a professional portfolio of at least 5 significant projects that demonstrate my capabilities</li>
+                <li>Develop the skills to architect complex web applications from concept to deployment</li>
+                <li>Establish a professional network with peers and mentors in the tech industry</li>
+                <li>Prepare myself for a career transition into a cloud engineer</li>
+                <li>Gain practical experience with agile development methodologies</li>
+            </ol>
+        </section>
+    </main>
+
+    <footer>
+        <p>&copy; 2025 ALT School Student Profile</p>
+        <p><a href="#top">Back to Top</a></p>
+    </footer>
 </body>
 </html>
