update on home navigation

--- a/index.html
+++ b/index.html
@@ -6,8 +6,15 @@
     <title>Student Profile_Alt School</title>
 </head>
 <body>
-    <header id="top">
-        <h1>ALT School Student Profile</h1>
+    <header>
+        <h1>AltSchool Africa - Student Profile</h1>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="table.html">Programs</a></li>
+                <li><a href="media.html">About Me</a></li>
+            </ul>
+        </nav>
     </header>
 
     <main>
